# PythonWrappedPluginExample

./: CMakeLists.txt
